# python-emc2305

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PRODUCTION_READINESS.md  PYPI_PUBLISHING.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  publish.yml
config/: emc2305.yaml  ventus.yaml.example
debug-sessions/: README.md
docs/: USER_GUIDE.md
docs/development/: README.md  register-readback-findings.md
docs/hardware/: README.md
emc2305/: __init__.py  settings.py
emc2305/driver/: __init__.py  constants.py  emc2305.py  i2c.py
emc2305/proto/: __init__.py
emc2305/server/: __init__.py
examples/python/: README.md  test_fan_control.py  test_fault_detection.py  test_fsc_mode.py  test_rpm_monitor.py
scripts/: deploy.sh
tests/: README.md  mock_i2c.py  test_driver_unit.py  test_emc2305_init.py  test_i2c_basic.py
ventus/: __init__.py  settings.py
ventus/driver/: __init__.py  constants.py  i2c.py
ventus/proto/: __init__.py
ventus/server/: __init__.py
